--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     // Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     // lombok
     compileOnly 'org.projectlombok:lombok'
