--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     // 유효성 검사 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // swagger
