--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ src/main/resources/application-jwt.yml
 src/main/resources/application-s3.yml
 src/main/resources/application-oauth2.yml
 src/main/resources/application-local.yml
+
+###.env###
+.env
