--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,6 +45,16 @@ jobs:
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml up -d
 
+      - name: Install Docker
+        run: |
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Wait for services to be healthy
         run: |
           docker-compose -f docker-compose.yml ps
