--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,12 +20,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'  # Specify the JDK distribution (temurin, zulu, etc.)
-
-      - name: Install Docker  # Docker 및 Docker Compose 설치 추가
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io docker-compose
+          distribution: 'temurin'
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
@@ -37,23 +32,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
       - name: Build and start services
         run: |
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml up -d
-
-      - name: Install Docker
-        run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh get-docker.sh
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Wait for services to be healthy
         run: |
@@ -65,7 +52,7 @@ jobs:
 
       - name: Run tests
         run: |
-          docker-compose -f docker-compose.yml run --rm api-server ./run-tests.sh
+          docker-compose -f docker-compose.yml run --rm api ./run-tests.sh
 
       - name: Clean up
         run: |
