--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -57,3 +57,18 @@ jobs:
       - name: Clean up
         run: |
           docker-compose -f docker-compose.yml down
+
+      - name: Access Secrets
+        run: |
+          echo "Secrets: ${{ secrets.SECRET }}"
+
+      - name: Deploy to EC2
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+        run: |
+          echo "$SSH_PRIVATE_KEY" > id_rsa
+          chmod 600 id_rsa
+          scp -o StrictHostKeyChecking=no -i id_rsa -o UserKnownHostsFile=/dev/null docker-compose.yml $EC2_USER@$EC2_HOST:~/app/
+          ssh -o StrictHostKeyChecking=no -i id_rsa -o UserKnownHostsFile=/dev/null $EC2_USER@$EC2_HOST "cd ~/app && docker-compose up -d --build"
