--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,57 +20,25 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'  # Specify the JDK distribution (temurin, zulu, etc.)
+          distribution: 'temurin'
 
-      - name: Install Docker  # Docker 및 Docker Compose 설치 추가
+      - name: Install Docker
         run: |
           sudo apt-get update
           sudo apt-get install -y docker.io docker-compose
 
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
-
-      - name: Set up Docker
-        run: |
-          sudo apt-get update
-          sudo apt-get remove -y containerd.io containerd
-          sudo apt-get install -y containerd.io
-
-
-      - name: Build and start services
-        run: |
-          docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml up -d
-
-      - name: Install Docker
-        run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh get-docker.sh
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Wait for services to be healthy
-        run: |
-          docker-compose -f docker-compose.yml ps
-          sleep 20
-
       - name: Run Gradle Build
         run: ./gradlew clean build
 
-      - name: Run tests
-        run: |
-          docker-compose -f docker-compose.yml run --rm api-server ./run-tests.sh
-
-      - name: Clean up
-        run: |
-          docker-compose -f docker-compose.yml down
+      - name: SSH to EC2 and deploy
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.EC2_HOST }}  # EC2 퍼블릭 IP 또는 도메인
+          username: ec2-user  # 보통 Amazon Linux의 경우 ec2-user 사용
+          key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secrets에 저장된 SSH 키
+          port: 22
+          script: |
+            cd /path/to/your/project  # EC2 인스턴스의 프로젝트 디렉토리로 이동
+            docker-compose down       # 기존 컨테이너 중지
+            docker-compose pull       # 새로운 이미지 가져오기
+            docker-compose up -d      # 서비스 재시작
