--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,6 +50,6 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t zxzz7608/backend:latest .
-          docker push zxzz7608/backend:latest
+          docker build -t zxzz7608/meettify:latest .
+          docker push zxzz7608/meettify:latest
 
