--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -5,7 +5,8 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # 빌드된 JAR 파일을 컨테이너로 복사
-COPY build/libs/meettify-0.0.1-SNAPSHOT.jar app.jar
+COPY build/libs/*.jar app.jar
+ENV SPRING_PROFILES_ACTIVE=prod
 
 # 컨테이너 시작 시 실행할 명령어 지정
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
