--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,7 +44,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.EC2_HOST }}  # EC2 퍼블릭 IP 또는 도메인
-          username: ec2-user  # 보통 Amazon Linux의 경우 ec2-user 사용
+          username: ubuntu  # ubuntu는 그대로임
           key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secrets에 저장된 SSH 키
           port: 22
           script: |
