--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,16 +12,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Github Repository
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+
+      - name: application.yml 파일 만들기
+        run: echo "${{secrets.APPLICATION_PROPERTIES}} > ./src/main/resources/application-prod.yml
 
       - name: Install Docker
         run: |
@@ -43,12 +45,12 @@ jobs:
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
-          host: ${{ secrets.EC2_HOST }}  # EC2 퍼블릭 IP 또는 도메인
+          host: ${{secrets.EC2_HOST}}  # EC2 퍼블릭 IP 또는 도메인
           username: ubuntu  # ubuntu는 그대로임
-          key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secrets에 저장된 PEM 키
+          key: ${{secrets.SSH_PRIVATE_KEY}}  # GitHub Secrets에 저장된 PEM 키
           port: 22
           script: |
-            cd ~/meettify  # EC2 인스턴스의 프로젝트 디렉토리로 이동
+            cd /home/ubuntu           # EC2 인스턴스의 프로젝트 디렉토리로 이동
             docker-compose down       # 기존 컨테이너 중지
             docker-compose pull       # 새로운 이미지 가져오기
             docker-compose up -d      # 서비스 재시작
