--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
 
       - name: application.yml 파일 만들기
-        run: echo "${{secrets.APPLICATION_PROPERTIES}} > ./src/main/resources/application-prod.yml
+        run: echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application-prod.yml
 
       - name: Install Docker
         run: |
