--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,7 @@ version: '3.8'
 services:
   builder:
     image: azul/zulu-openjdk:17
-    volumes:
-      - .:/opt/build
-      - type: volume
-        source: app_home
-        target: /opt/app
-        volume:
-          nocopy: true
-      - type: volume
-        source: gradle_home
-        target: /opt/.gradle:rw
-    working_dir: /opt/build
+    working_dir: /home/ubuntu
     command: "/opt/build/gradlew copyDeps --gradle-user-home=/opt/.gradle -x test"
 
   redis:
