--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -56,7 +56,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: SSH to EC2 and deploy
-        uses: appleboy/ssh-action@v0.1.3
+        uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.EC2_HOST}}  # EC2 퍼블릭 IP 또는 도메인
           username: ubuntu  # ubuntu는 그대로임
