--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           host: ${{secrets.EC2_HOST}}  # EC2 퍼블릭 IP 또는 도메인
           username: ubuntu  # ubuntu는 그대로임
-          password: ${{secrets.SSH_PRIVATE_KEY}}  # GitHub Secrets에 저장된 PEM 키
+          key: ${{secrets.SSH_PRIVATE_KEY}}  # GitHub Secrets에 저장된 PEM 키
           port: 22
           script: |
             cd /home/ubuntu           # EC2 인스턴스의 프로젝트 디렉토리로 이동
@@ -69,7 +69,7 @@ jobs:
             docker-compose up -d      # 서비스 재시작
           debug: true
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
