[Fix] 깃 액션 에러 고치기

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   builder:
     image: azul/zulu-openjdk:17
     working_dir: /home/ubuntu
+    volumes:
+      - .:/home/ubuntu
+    command: ["./gradlew", "build"]
 
   redis:
     image: redis:6.2.6
