--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   redis:
     image: redis:6.2.6
@@ -14,7 +13,7 @@ services:
       MYSQL_USER: ${rds_mysql_name}
       MYSQL_PASSWORD: ${rds_mysql_secret}
     ports:
-      - "3307:3306" # 호스트의 3307 포트를 컨테이너의 3306 포트로 매핑
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     restart: always
@@ -45,9 +44,9 @@ services:
       context: ./
       dockerfile: docker/api/Dockerfile
     env_file:
-      - .env  # 환경 변수를 .env 파일에서 불러오기
+      - .env
     environment:
-      - SPRING_PROFILES_ACTIVE=prod  # 배포 환경에서 사용할 프로파일 추가
+      - SPRING_PROFILES_ACTIVE=prod
     depends_on:
       - mysql
       - redis
