--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,7 @@ services:
     restart: always
 
   api:
-    build:
-      context: ./
-      dockerfile: docker/api/Dockerfile
+    image: zxzz7608/meettify:latest    # GitHub Actions에서 빌드한 이미지 사용
     env_file:
       - .env
     environment:
