[Fix] 깃 액션 에러 고치기

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t zxzz8014/meettify:latest .
+          docker build -t zxzz8014/meettify:latest -f docker/api/Dockerfile .
           docker push zxzz8014/meettify:latest
 
       - name: SSH to EC2 and deploy
