--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,7 +26,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run Gradle Build
-        run: ./gradlew clean build --no-daemon
+        run: ./gradlew clean build
 
       - name: Install Docker
         run: |
