--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,7 +26,10 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run Gradle Build
-        run: ./gradlew clean build
+        run: |
+          chmod +x ./gradlew
+          ./gradlew wrapper
+          ./gradlew clean build
 
       - name: Install Docker
         run: |
@@ -49,9 +52,13 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build and push Docker image
-        run: |
-          docker build -t zxzz8014/meettify:latest -f docker/api/Dockerfile .
-          docker push zxzz8014/meettify:latest
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          dockerfile: docker/api/Dockerfile
+          push: true
+          tags: ${{secrets.DOCKERHUB_REPOSITORY}}/meettify:latest
+
 
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@master
@@ -61,7 +68,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /home/ubuntu
             docker-compose down
             docker-compose pull
             docker-compose up -d
