--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,12 +45,14 @@ jobs:
             echo "Docker is already installed."
           fi
 
+      # 도커 로그인
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
+      # 프로젝트 빌드 그리고 이미지처리
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -59,6 +61,7 @@ jobs:
           push: true
           tags: ${{secrets.DOCKERHUB_REPOSITORY}}/meettify:latest
 
+      # ec2 연결
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@master
         with:
