--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,6 +30,17 @@ jobs:
           chmod +x ./gradlew
           ./gradlew wrapper
           ./gradlew clean build
+        env:
+          RDS_MYSQL_SECRET: ${{ secrets.RDS_MYSQL_SECRET }}
+          RDS_MYSQL_NAME: ${{ secrets.RDS_MYSQL_NAME }}
+          RDS_MYSQL_URL: ${{ secrets.RDS_MYSQL_URL }}
+          S3_ACCESS: ${{ secrets.S3_ACCESS }}
+          S3_SECRET: ${{ secrets.S3_SECRET }}
+          GOOGLE_CLIENT: ${{ secrets.GOOGLE_CLIENT }}
+          GOOGLE_SECRET: ${{ secrets.GOOGLE_SECRET }}
+          NAVER_CLIENT: ${{ secrets.NAVER_CLIENT }}
+          NAVER_SECRET: ${{ secrets.NAVER_SECRET }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
       - name: Install Docker
         run: |
