--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.9'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'com.google.cloud.tools.jib' version '3.2.1' // Jib 플러그인 추가
 }
 
 group = 'com.example'
@@ -25,6 +26,20 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+// Jib 설정 추가
+jib {
+    from {
+        image = "openjdk:17-jdk-slim" // 기본 이미지 설정
+    }
+    to {
+        image = System.getenv('DOCKERHUB_REPOSITORY') + "/meettify" // 환경변수 사용
+        tags = ["latest"] // 태그 설정
+    }
+    container {
+        jvmFlags = ['-Dspring.profiles.active=prod', '-XX:+UseContainerSupport']
+    }
 }
 
 dependencies {
