--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,10 +40,7 @@ services:
     restart: always
 
   api:
-    build:
-      context: .
-      dockerfile: docker/api/Dockerfile
-    image: zxzz8014/meettify:latest
+    image: ${DOCKERHUB_REPOSITORY}/meettify:latest # Jib으로 빌드한 이미지를 사용
     env_file:
       - .env
     environment:
