[Modify] Jib 사용으로 수정

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -78,13 +78,19 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /home/ubuntu  # docker-compose.yml 파일이 위치한 디렉토리로 이동
-            if ! command -v docker-compose &> /dev/null; then
-              echo "docker-compose is not installed. Installing..."
-              sudo apt-get update
-              sudo apt-get install -y docker-compose
-            fi
+            cd /home/ubuntu
             docker-compose down
             docker-compose pull
             docker-compose up -d
-          debug: true
+            # 환경 변수를 직접 설정하여 실행
+            export AWS_ACCESS_KEY_ID=${{ secrets.S3_ACCESS }}
+            export AWS_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET }}
+            export OAUTH2_CLIENT_ID=${{ secrets.GOOGLE_CLIENT }}
+            export OAUTH2_CLIENT_SECRET=${{ secrets.GOOGLE_SECRET }}
+            export OAUTH2_NAVER_CLIENT_ID=${{ secrets.NAVER_CLIENT }}
+            export OAUTH2_NAVER_CLIENT_SECRET=${{ secrets.NAVER_SECRET }}
+            export RDS_MYSQL_URL=${{ secrets.RDS_MYSQL_URL }}
+            export RDS_MYSQL_NAME=${{ secrets.RDS_MYSQL_NAME }}
+            export RDS_MYSQL_SECRET=${{ secrets.RDS_MYSQL_SECRET }}
+            export JWT_SECRET=${{ secrets.JWT_SECRET }}
+            docker-compose up -d
