[Modify] 도메인 모델 패턴으로 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: ${RDS_MYSQL_SECRET}
+      URL: ${RDS_MYSQL_URL}
       MYSQL_DATABASE: meettify
       MYSQL_USER: ${RDS_MYSQL_NAME}
       MYSQL_PASSWORD: ${RDS_MYSQL_SECRET}
