--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -61,6 +61,17 @@ jobs:
           push: true
           tags: ${{secrets.DOCKERHUB_REPOSITORY}}/meettify:latest
 
+
+      - name: Copy docker-compose.yml to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: "docker-compose.yml"
+          target: "/home/ubuntu/docker-compose.yml"
+
       # ec2 연결
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@master
