--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -62,15 +62,21 @@ jobs:
           tags: ${{secrets.DOCKERHUB_REPOSITORY}}/meettify:latest
 
 
-      - name: Copy docker-compose.yml to EC2
-        uses: appleboy/scp-action@master
+      - name: SSH to EC2 and remove old docker-compose.yml
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
-          source: "docker-compose.yml"
-          target: "/home/ubuntu/docker-compose.yml"
+          script: |
+            # 기존 docker-compose.yml 파일 삭제
+            if [ -f /home/ubuntu/docker-compose.yml ]; then
+              rm /home/ubuntu/docker-compose.yml
+              echo "Removed old docker-compose.yml"
+            else
+              echo "No old docker-compose.yml file found"
+            fi
 
       # ec2 연결
       - name: SSH to EC2 and deploy
