--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     // 유효성 검사 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // swagger
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     // ModelMapper 라이브러리
     implementation 'org.modelmapper:modelmapper:3.1.1'
     // ⭐ Spring boot 3.x이상에서 QueryDsl 패키지를 정의하는 방법
