--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,24 +13,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - name: Checkout code from GitHub
         uses: actions/checkout@v4
 
+      # 2. JDK 17 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # 3. Gradle 권한주기
       - name: Make Gradle Wrapper executable
         run: chmod +x ./gradlew
 
+      # 4. Gradle 빌드
       - name: Run Gradle Build
         run: |
           chmod +x ./gradlew
           ./gradlew wrapper
           ./gradlew clean build
 
+      # 4. Docker 설치
       - name: Install Docker
         run: |
           if ! command -v docker &> /dev/null; then
@@ -45,14 +50,14 @@ jobs:
             echo "Docker is already installed."
           fi
 
-      # 도커 로그인
+      # 5. 도커 로그인
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      # 프로젝트 빌드 그리고 이미지처리
+      # 6. Docker 프로젝트 이미지 빌드 그리고 이미지 푸시
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -61,7 +66,33 @@ jobs:
           push: true
           tags: ${{secrets.DOCKERHUB_REPOSITORY}}/meettify:latest
 
+      # 7. 기존 docker-compose.yml 파일 삭제 (EC2에서)
+      - name: SSH to EC2 and remove old docker-compose.yml
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            # 기존 docker-compose.yml 파일이 있으면 삭제
+            if [ -f /home/ubuntu/docker-compose.yml ]; then
+              echo "Old docker-compose.yml found, removing..."
+              rm /home/ubuntu/docker-compose.yml
+            fi
 
+      # 8. docker-compose.yml 파일을 EC2로 복사
+      - name: Copy docker-compose.yml to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: docker-compose.yml  # 워크플로우에 있는 docker-compose.yml 파일
+          target: /home/ubuntu/docker-compose.yml  # EC2의 대상 경로
+
+      # 9. EC2에 SSH 접속해서 배포
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@master
         with:
@@ -70,23 +101,26 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            # 기존 docker-compose.yml 파일 삭제
+
+            # docker-compose.yml 파일이 복사되었는지 확인
             if [ -f /home/ubuntu/docker-compose.yml ]; then
-              rm /home/ubuntu/docker-compose.yml
-              echo "Removed old docker-compose.yml"
+              echo "New docker-compose.yml has been copied."
             else
-              echo "No old docker-compose.yml file found"
+              echo "docker-compose.yml was not copied."
+              exit 1
             fi
-        
+
             # docker-compose 설치 확인
             if ! command -v docker-compose &> /dev/null; then
               echo "docker-compose is not installed. Installing..."
               sudo apt-get update
               sudo apt-get install -y docker-compose
             fi
-        
+
             # 기존 컨테이너 중지 및 제거
             docker-compose down
-            docker-compose rm -f  # 강제로 컨테이너 제거
+            docker-compose rm -f
+
+            # 최신 이미지 가져와서 컨테이너 실행
             docker-compose pull
             docker-compose up -d
