--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -90,7 +90,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           source: docker-compose.yml  # 워크플로우에 있는 docker-compose.yml 파일
-          target: /home/ubuntu/docker-compose.yml  # EC2의 대상 경로
+          target: /home/ubuntu # EC2의 대상 경로
 
       # 9. EC2에 SSH 접속해서 배포
       - name: SSH to EC2 and deploy
