[Fix] ec2 접속 연결 고치기

--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -16,4 +16,4 @@ EXPOSE 8080
 COPY ${JAR_FILE} app.jar
 
 # 컨테이너 시작 시 실행할 명령어 지정
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar", "0.0.0.0:8080"]
