--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -2,18 +2,28 @@
 FROM gradle:7.0-jdk17 AS builder
 WORKDIR /app
 
-# Gradle Wrapper를 사용하여 빌드
+# Gradle Wrapper를 복사하고 실행 권한 부여
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle .
+COPY settings.gradle .
+
+# 소스 코드를 복사
+COPY src src
+
+# Gradle 빌드 수행
 RUN chmod +x gradlew && ./gradlew build --no-daemon
 
 # Base image for running the application
 FROM openjdk:17-jdk-slim
 
+# JAR 파일 경로 설정
 ARG JAR_FILE=build/libs/meettify-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8080
 
 # 빌드된 JAR 파일을 컨테이너로 복사
-COPY ${JAR_FILE} app.jar
+COPY --from=builder /app/${JAR_FILE} app.jar
 
 # 컨테이너 시작 시 실행할 명령어 지정
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar", "0.0.0.0:8080"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
