--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,11 @@ services:
     ports:
       - "6379:6379"  # 외부 포트
     restart: always
-
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 3
   mysql:
     image: mysql:8.0
     environment:
@@ -71,6 +75,8 @@ services:
       interval: 10s  # 상태 확인 간격
       retries: 5  # 실패 시 재시도 횟수
       timeout: 5s  # 타임아웃 설정
+    volumes:
+      - ./src/main/resources/application-prod.yml:/app/config/application-prod.yml  # 설정 파일 마운트
 
 volumes:
   mysql_data:  # MySQL 데이터 지속성을 위한 볼륨
