--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -102,9 +102,10 @@ jobs:
           port: 22
           script: |
             # 기존 컨테이너 중지 및 제거
-            docker-compose down --remove-orphans
-  
-            # 최신 이미지 가져와서 컨테이너 실행
-            docker-compose pull
-            docker-compose up -d --build
+            docker-compose down
+            docker-compose rm -f
 
+            # 최신 이미지 가져와서 컨테이너 실행
+            docker-compose build
+            docker-compose pull
+            docker-compose up -d
