[Fix] ec2 환경변수 고치기

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       timeout: 5s  # 타임아웃 설정
     volumes:
       - ./src/main/resources/application-prod.yml:/app/config/application-prod.yml  # YAML 파일을 컨테이너와 연결
-    command: [["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]]
+    command: ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
 
 volumes:
   mysql_data:  # MySQL 데이터 지속성을 위한 볼륨
