--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,6 @@ src/main/resources/application-local.yml
 
 src/main/resources/index.html
 DS_Store
-gitignore
 src/.DS_Store
 src/main/.DS_Store
+src/main/java/.DS_Store
