--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -106,6 +106,5 @@ jobs:
             docker-compose rm -f
 
             # 최신 이미지 가져와서 컨테이너 실행
-            docker-compose build
             docker-compose pull
-            docker-compose up -d
+            docker-compose up -d --build
