--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
 
   api:
     build:
-      context: .
+      context: /home/ubuntu
       dockerfile: Dockerfile  # Dockerfile 경로
     image: zxzz8014/meettify:latest
     env_file:
